# qonscious

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  _vscode_example_settings.json  mkdocs.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.github/workflows/: ci.yml  docs.yml  release-pypi.yml
docs/: index.md
docs/reference/: index.md
docs/tutorials/: contributing-tutorials.md  run-in-colab.md  understanding-run-conditionally.md
notebooks/: backend_benchmarking.ipynb  chsh_constraint_demo.ipynb  chsh_test_demo.ipynb  grover_run_conditionally_demo.ipynb  introspection_time_drift.ipynb  setup_imports.py
qonscious/adapters/: __init__.py  aer_sampler_adapter.py  backend_adapter.py  ibm_sampler_adapter.py
qonscious/constraints/: __init__.py  always_pass_constraint.py  constraint.py  packed_chsh.py
qonscious/core/: __init__.py  aer_sampler_adapter.py  backend_adapter.py  executor.py  ibm_sampler_adapter.py  merit_compliance_check.py  types.py
qonscious/foms/: __init__.py  figure_of_merit.py  packed_chsh.py
qonscious/policies/: __init__.py  minimum_acceptable_value.py  threshold_policy.py
src/qonscious/: run_conditionally.py
src/qonscious/actions/: qonscious_callable.py
src/qonscious/adapters/: __init__.py  aer_sampler_adapter.py  aer_simulator_adapter.py  backend_adapter.py  ibm_sampler_adapter.py  ionq_backend_adapter.py  pasqal_backend_adapter.py  quafu_backend_adapter.py
src/qonscious/checks/: merit_compliance_check.py
src/qonscious/core/: __init__.py  executor.py  types.py
src/qonscious/foms/: __init__.py  aggregtate_qpu_fom.py  grover_fom.py  (+2 more)
tests/: test_aer_sampler_adapter.py  test_aer_simulator_adapter.py  test_always_pass_constraint.py  test_executor.py  test_ibm_sampler_adapter.py  test_ionq_backend_adapter.py  test_packed_chsh.py  test_packed_tilted_chsh.py  test_qonscious_runner.py  test_quafu_adapter.py  test_quafu_chsh.py  test_quafu_grover.py
(+1 files in other folders)
